--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -104,6 +104,10 @@
         textarea {
             height: 20px;
         }
+
+        .red{
+            color:red;
+        }
     </style>
 }
 
@@ -116,18 +120,21 @@
         <div style="display:inline-block;border:1px solid gray;width:38%;height:15vh;padding-left:5px">
             <div><h1 style="font-size:1.5em">PO information</h1></div>
             <div>
+                @{ 
+                    string IsFD = Model.FinalInspection.ISFD ? "red" : string.Empty;
+                }
                 <table>
                     <tr>
                         <td>PO#</td>
                         <td class="valueColor" style="width:20%">@Model.FinalInspection.CustPONO</td>
                         <td style="padding-left:10px;">Style</td>
-                        <td class="valueColor" style="width:20%">@Model.StyleID</td>
+                        <td class="valueColor @IsFD" style="width:20%">@Model.StyleID</td>
                         <td>Brand</td>
                         <td class="valueColor">@Model.BrandID</td>
                     </tr>
                     <tr>
                         <td>SP#</td>
-                        <td class="valueColor" colspan="5">
+                        <td class="valueColor @IsFD" colspan="5">
                             <input type="text" value="@Model.SP" style="width:100%" readonly />
                         </td>
                     </tr>
