ISP20221012 - [Final Inspection Query] [Detail] 調整文字變色判斷

--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -105,8 +105,8 @@
             height: 20px;
         }
 
-        .red{
-            color:red;
+        .red {
+            color: red !important;
         }
     </style>
 }
