--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
@@ -28,6 +28,9 @@
         #CheckListTable {
             font-size: 1.4em;
         }
+        .ColTitle {
+            text-align: center;
+        }
     </style>
 }
 @Html.Partial("~/Areas/FinalInspection/Views/Shared/_Inspection_Layout.cshtml")
@@ -35,7 +38,7 @@
     @using (Html.BeginForm("AddDefect", "Inspection", FormMethod.Post, new { @id = "AddDefectForm", onsubmit = "return checkValue(this.submitted)" }))
     {
 
-        <div style="padding:2em 3em 2em 3em;width:80%;float:left;position: absolute;transform: translate(-50%, 0%);left: 50%">
+        <div style="padding:2em 3em 2em 3em;width:95%;float:left;position: absolute;transform: translate(-50%, 0%);left: 50%">
             <div>
                 <h1 style="font-size: 2vh; font-weight: 900; ">
                     How many reject Qty(pcs)
@@ -96,16 +99,17 @@
                         items[i].Ukey
                         , items[i].DefectCodeDesc
                         , items[i].Qty
-                        //, items[i].ListFinalInspectionDefectImage
                         , FinalInspection_DetailImage.Image
                         , items[i].RowIndex
                         , items[i].DefectCode
                         , items[i].DefectType
+                        , items[i].Operation
+                        , items[i].Operator
                     ]);
                 }
             }
 
-            adata.push([null, result[keyCount], temp])
+            adata.push([null, result[keyCount], 'Operation', 'Operator', temp])
             keyCount++
         }
 
@@ -117,7 +121,9 @@
                 destroy: true,
                 columnDefs: [
                     { targets: 0, width: "2%", orderable: false },
-                    { targets: 1, width: "98%", orderable: false },
+                    { targets: 1, width: "38%", orderable: false },
+                    { targets: 2, width: "30%", orderable: false },
+                    { targets: 3, width: "30%", orderable: false },
                 ],
                 columns: [
                     {
@@ -125,6 +131,12 @@
                     },
                     {
                         "style": "color:#E62513",
+                    },
+                    {
+                        "className": "ColTitle",
+                    },
+                    {
+                        "className": "ColTitle",
                     },
                 ],
                 "filter": false,
@@ -157,21 +169,25 @@
         });
 
         function format(d) {
-            var list = d[2];
+            var list = d[4];
             var sTr = "";
 
             $(list).each(function (index, value) {
-
+                
                 var RowIndex = value[4];
-                sTr = sTr + "<tr><td style='width:70%'>" + value[1] + "</td>";
+                var Operation = value[7];
+                var Operator = value[8];
+                sTr = sTr + "<tr><td style='width:30%'>" + value[1] + "</td>";
                 sTr = sTr + `<td style='vertical-align: middle'>
     <input type='hidden' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Ukey' name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Ukey' value='${value[0]}'>
     <input type='hidden' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].RowIndex' name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].RowIndex' value='${RowIndex}'>
     <input type='hidden' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].DefectCode' name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].DefectCode' value='${value[5]}'>
-    <input type='hidden' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].DefectType' name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].DefectType' value='${value[6]}'>
+    <input type='hidden' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].DefectType' name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].DefectType' value='${value[6]}'>      
     <input type='number' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Qty' onchange='QtyChange("${value[6]}",${index},this)' name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Qty'  min="0" style="width: 7vh" id='${value[0]} ' name='${value[0]}'  value='${value[2]}' /></td>
     <td> <img src="/Image/Icon/Camera.png" style="cursor: pointer;" onclick="ScreenShot(${value[0]},${RowIndex})" width="25vw" height="25vw" /></td>
     <td> <img src="/Image/Icon/Picture.png" style="cursor: pointer;" onclick="OpenPicture(${value[0]},${RowIndex})" width="25vw" height="25vw" /></td>
+    <td><input type='text' style='width:100%' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Operation' readonly name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Operation' value='${Operation}'></td>
+    <td><input type='text' style='width:100%' id='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Operator' readonly name='addDefct.ListFinalInspectionDefectItem[${RowIndex}].Operator' value='${Operator}'></td>
     </tr>`;
 
             });
