ISP20220989 - 把AccessoryOvenWash的Scale的鬼抓一抓

--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
@@ -260,7 +260,7 @@
                                             <select id="Scale" name="Scale" disabled="disabled" style="width:157px;">
                                                 @foreach (var item in Model.ScaleData)
                                                 {
-                                                    string selected = item.Text.Equals(Model.Scale) || item.Text.Equals("4-5") ? "selected" : "";
+                                                    string selected = item.Text.Equals(Model.Scale) || (string.IsNullOrEmpty(Model.Scale) && item.Text.Equals("4-5")) ? "selected" : "";
                                                     <option value="@item.Value" @selected>@item.Text</option>
                                                 }
                                             </select>
